tests/it/snapshots/it__workspace_symbol__filter_bibtex.snap
---
source: tests/it/workspace_symbol.rs
assertion_line: 117
expression: "run(\"bibtex\")?"
---
[
  {
    "name": "foo",
    "kind": 24,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.bib",
      "range": {
        "start": {
          "line": 0,
          "character": 0
        },
        "end": {
          "line": 0,
          "character": 14
        }
      }
    }
  },
  {
    "name": "bar",
    "kind": 15,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.bib",
      "range": {
        "start": {
          "line": 2,
          "character": 0
        },
        "end": {
          "line": 2,
          "character": 20
        }
      }
    }
  }
]
