tests/it/snapshots/it__workspace_symbol__filter_type_math.snap
---
source: tests/it/workspace_symbol.rs
assertion_line: 111
expression: "run(\"math\")?"
---
[
  {
    "name": "Equation (1)",
    "kind": 14,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 9,
          "character": 0
        },
        "end": {
          "line": 11,
          "character": 14
        }
      }
    }
  },
  {
    "name": "Lemma 1 (Qux)",
    "kind": 13,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 33,
          "character": 0
        },
        "end": {
          "line": 35,
          "character": 11
        }
      }
    }
  }
]
